--- a/about.html
+++ b/about.html
@@ -257,7 +257,7 @@
                             <h2 class="sec-title">Driving Industry Standards with Every Fastener</h2>
                             <p class="sec-text">
 
-                                24 Ashok Fasteners Pvt. Ltd., established in 1978 by late Mr. Ashok Kadam and later led
+                                24 Ashok Fasteners Pvt. Ltd., established in 1988 by late Mr. Ashok Kadam and later led
                                 by Mr. Sunil Kadam, has evolved into a premier manufacturing unit in Maharashtra,
                                 specializing in fasteners. Initially founded as an ambition firm, the company
                                 transitioned to a proprietorship firm in 2011 and then to a private limited firm in 2020
@@ -372,8 +372,7 @@
                             <p class="sec-text">
                                 After they pass Mr. Sunil Ashok Kadam ride the company as the leader in fasteners
                                 industry. The company services over 500 customers and employs many people.
-                                Ashok Fasteners Corporate headquarters is located in Gut No. 1532 Sonavane Wasti,
-                                Chikhali-Talawade Road, Chikhali, pune-411062, Maharashtra, India. Lots of companies
+                                Ashok Fasteners Corporate headquarters is located in Sonawane Wasti, Bhalekar Chowk, Jyotiba Nagar, Talawade , pune, Maharashtra, India. Lots of companies
                                 talk about commitment, but at Ashok Fastener industry, we do more than talk. We truly
                                 put commitment into practice every day by giving you the highest quality products,
                                 engineering capabilities and value-added services at the lowest cost of ownership.
