--- a/about.html
+++ b/about.html
@@ -372,7 +372,7 @@
                             <p class="sec-text">
                                 After they pass Mr. Sunil Ashok Kadam ride the company as the leader in fasteners
                                 industry. The company services over 500 customers and employs many people.
-                                Ashok Fasteners Corporate headquarters is located in Gat No.94, Shop No.07 Sonawane Wasti, Bhalekar Chowk, Jyotiba Nagar, Talawade , pune, Maharashtra, India. Lots of companies
+                                Ashok Fasteners Corporate headquarters is located in Gat No.94, Shop No.07 Sonawane Wasti, Bhalekar Chowk, Jyotiba Nagar, Talawade , Pune, Maharashtra, India. Lots of companies
                                 talk about commitment, but at Ashok Fastener industry, we do more than talk. We truly
                                 put commitment into practice every day by giving you the highest quality products,
                                 engineering capabilities and value-added services at the lowest cost of ownership.
